--- a/Application/Admin/View/Post/index.html
+++ b/Application/Admin/View/Post/index.html
@@ -71,7 +71,7 @@
                                 <?php else: ?>
                                 <a class="link-update" href="/index.php?m=admin&c=post&a=displays&pid=<?=$post['pid']?>">隐藏</a>
                                 <?php endif; ?> |
-                                <a class="link-update" href="/index.php?m=admin&c=post&a=edit&pid=<?=$post['pid']?>">查看回复</a> |
+                                <a class="link-update" href="/index.php?m=admin&c=seem&a=index&pid=<?=$post['pid']?>">查看回复</a> |
                                 <a class="link-update" href="/index.php?m=admin&c=post&a=edit&pid=<?=$post['pid']?>">修改</a> |
                                 <a class="link-del" href="/index.php?m=admin&c=post&a=del&pid=<?=$post['pid']?>">删除</a>
                             </td>
