--- a/Application/Admin/View/Cate/edit.html
+++ b/Application/Admin/View/Cate/edit.html
@@ -7,7 +7,7 @@
         </div>
         <div class="result-wrap">
             <div class="result-content">
-                <form action="/index.php?m=admin&amp;c=cate&amp;a=save" method="post" id="myform" name="myform" enctype="multipart/form-data">
+                <form action="/index.php?m=admin&amp;c=cate&amp;a=update&cid=<?=$_GET['cid']?>" method="post" id="myform" name="myform" enctype="multipart/form-data">
                     <table class="insert-tab" width="100%">
                         <tbody>
                         	<tr>
