--- a/Application/Admin/View/Post/edit.html
+++ b/Application/Admin/View/Post/edit.html
@@ -13,7 +13,13 @@
                             <tr>
                                 <th><i class="require-red">*</i>用户ID：</th>
                                 <td>
-                                    <input class="common-text required" id="title" name="title" size="50" value="<?=$post['title']?>" type="text">
+                                    <input class="common-text required" id="title" name="title" size="50" disabled="disabled" value="<?=$post['uid']?>" type="text">
+                                </td>
+                            </tr>
+                            <tr>
+                                <th><i class="require-red">*</i>用户名：</th>
+                                <td>
+                                    <input class="common-text required" id="title" name="title" size="50" disabled="disabled" value="<?=$users[ $post['uid'] ]?>" type="text">
                                 </td>
                             </tr>
                         	<tr>
@@ -29,7 +35,7 @@
                             <tr>
                                 <th></th>
                                 <td>
-                                    <input class="btn btn-primary btn6 mr10" value="提交" type="submit">
+                                    <input class="btn btn-primary btn6 mr10" value="修改" type="submit">
                                     <input class="btn btn6" onclick="history.go(-1)" value="返回" type="button">
                                 </td>
                             </tr>
