--- a/Application/Home/View/Common/footer.html
+++ b/Application/Home/View/Common/footer.html
@@ -1,3 +1,4 @@
+<div class="list-page" style="text-align:center;"><?=$show_page?></div>
         <!--友情链接部分start-->
         <div id="friend_link">
             
